<resources>
    <string name="app_name">Lab2 - AppRun</string>

    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="falta_dato">Falta dato</string>

    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="distancia">Distancia</string>
    <string name="fecha">Fecha</string>
    <string name="info">Información de contacto: </string>
    <string name="lugar">Lugar</string>
    <string name="telefono">Telefono</string>

    <string name="registrar">Registrar</string>
    <string name="datos">Proyecto realizado para la segunda practica de Computación Movil</string>
    <string name="realizado">Realizada por: </string>
    <string name="camila">Maria Camila Gomez</string>
    <string name="jhonatan">Jonathan Damian Munera</string>
    <string name="samuel">Samuel David Arenas</string>
    <string name="docente">Docente:</string>
    <string name="profesor">Sebastian Guzman Obando</string>
    <string name="contrasenas_no_iguales">Las contraseñas no son iguales</string>

    <!--Mensajes-->
    <string name="inicieSesion">Por favor inicie sesion</string>
    <string name="sesionTerminada">Se ha terminado sesion</string>
    <string name="noInicio">No se tiene sesion iniciada</string>
    <string name="add_imagen">Agregar imagen</string>
</resources>