<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tv_reg_nombre"
            android:hint="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/tv_reg_descripcion"
            android:hint="@string/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/tv_reg_distancia"
            android:hint="@string/distancia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/tv_reg_lugar"
            android:hint="@string/lugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <DatePicker
            android:id="@+id/tv_reg_fecha"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <EditText
            android:id="@+id/tv_reg_telefono"
            android:hint="@string/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="phone" />

        <EditText
            android:id="@+id/tv_reg_email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/bt_reg_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registrar" />


    </LinearLayout>

</ScrollView>